Fixed searchbox overflow

--- a/src/AppBundle/Resources/scss/template.scss
+++ b/src/AppBundle/Resources/scss/template.scss
@@ -1149,7 +1149,6 @@ a.verified i {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  overflow: hidden;
   padding: 35px;
   border-radius: 4px;
 }
@@ -1450,7 +1449,7 @@ a.verified i {
   color: #000;
   background-color: #fff;
   border-radius: 4px;
-  overflow: hidden;
+  padding-bottom: 30px;
 }
 
 .home-banner .contact-info {
@@ -1470,6 +1469,8 @@ a.verified i {
   background-color: #f7f7f7;
   text-transform: capitalize;
   border-bottom: 1px solid #ececec;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .home-banner .contact-form h3 {
